--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,57 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+<header class="header">
+  <div class="container">
+    <div class="header__inner">
+<a class="logo" href="#">
+  <img class="logo__img" src="images/logo.png" alt="logo" >
+</a>
+<nav class="menu">
+  <ul class="menu__list">
+    <li class="menu__list-item">
+      <a class="menu__list-link menu__list-link--active" href="#">Home +</a>
+    </li>
+    <li class="menu__list-item">
+      <a  class="menu__list-link" href="#">About</a>
+    </li>
+    <li class="menu__list-item">
+      <a  class="menu__list-link" href="#">Services </a>
+    </li>
+    <li class="menu__list-item">
+      <a  class="menu__list-link" href="#">Pages +</a>
+    </li>
+    <li class="menu__list-item">
+      <a  class="menu__list-link" href="#">News</a>
+    </li>
+    <li class="menu__list-item">
+      <a class="menu__list-link" href="#">Contact</a>
+    </li>
+  </ul>
+</nav>
+<div class="user-nav">
+  <a  class="user-nav__link" href="#">
+    <img  class="user-nav__link-img" src="images/icons/user.svg" alt="user icon">
+  </a>
+  <a  class="user-nav__link" href="#"><img class="user-nav__link-img" src="images/icons/search.svg" alt="user icon"></a>
+  <a  class="user-nav__link" href="#">
+    <img class="user-nav__link-img" src="images/icons/heart.svg" alt="user icon">
+    <span class="user-nav__num">3</span>
+  </a>
+  
+  <a  class="user-nav__link" href="#">
+    <img class="user-nav__link-img" src="images/icons/cart.svg" alt="user icon">
+    <span class="user-nav__num">7</span>
+  </a>
+</div>
+
+
+    </div>
+  </div>
+</header>
+
+
+
 
   <script src="js/main.min.js"></script>
 </body>
