added top-slider section

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,6 @@
 <nav class="menu">
   <ul class="menu__list">
     <li class="menu__list-item">
-
-
       <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
     </li>
     <li class="menu__list-item">
@@ -30,25 +28,6 @@
     </li>
     <li class="menu__list-item">
       <a  class="menu__list-link" href="#">CONTACT</a>
-
-
-      <a class="menu__list-link menu__list-link--active" href="#">Home +</a>
-    </li>
-    <li class="menu__list-item">
-      <a  class="menu__list-link" href="#">About</a>
-    </li>
-    <li class="menu__list-item">
-      <a  class="menu__list-link" href="#">Services </a>
-    </li>
-    <li class="menu__list-item">
-      <a  class="menu__list-link" href="#">Pages +</a>
-    </li>
-    <li class="menu__list-item">
-      <a  class="menu__list-link" href="#">News</a>
-    </li>
-    <li class="menu__list-item">
-      <a class="menu__list-link" href="#">Contact</a>
-
     </li>
   </ul>
 </nav>
@@ -61,18 +40,79 @@
     <img class="user-nav__link-img" src="images/icons/heart.svg" alt="user icon">
     <span class="user-nav__num">3</span>
   </a>
-  
   <a  class="user-nav__link" href="#">
     <img class="user-nav__link-img" src="images/icons/cart.svg" alt="user icon">
     <span class="user-nav__num">7</span>
   </a>
 </div>
-
     </div>
   </div>
 </header>
 <main class="main">
-  
+  <section class="top-slider">
+    <div class="container top-slider__container">
+      <div class="top-slider__inner">
+        <div class="top-slider__item">
+<div class="top-slider__content">
+  <h3 class="top-slider__title">
+    New Season<br>
+    New Brand Collection
+  </h3>
+  <p class="top-slider__text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+    et dolore magna aliqua. Ipsum.
+  </p>
+  <a class="top-slider__link" href="#">BUY NOW</a>
+</div>
+<img class="top-slider__img" src="images/slider/photo.png" alt="slider images">
+</div>
+        <div class="top-slider__item">
+          <div class="top-slider__content">
+            <h3 class="top-slider__title">
+              New Season<br>
+              New Brand Collection
+            </h3>
+            <p class="top-slider__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          et dolore magna aliqua. Ipsum.
+            </p>
+            <a class="top-slider__link" href="#" >BUY NOW</a>
+            </div>
+            <img class="top-slider__img"src="images/slider/photo.png" alt="slider images">
+        </div>
+        <div class="top-slider__item">
+<div class="top-slider__content">
+  <h3 class="top-slider__title">
+    New Season<br>
+    New Brand Collection
+  </h3>
+  <p class="top-slider__text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+    et dolore magna aliqua. Ipsum.
+  </p>
+  <a class="top-slider__link" href="#">BUY NOW</a>
+</div>
+<img class="top-slider__img" src="images/slider/photo.png" alt="slider images">
+</div>
+ <div class="top-slider__item">
+<div class="top-slider__content">
+  <h3 class="top-slider__title">
+    New Season<br>
+    New Brand Collection
+  </h3>
+  <p class="top-slider__text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+    et dolore magna aliqua. Ipsum.
+  </p>
+  <a class="top-slider__link" href="#">BUY NOW</a>
+</div>
+<img class="top-slider__img" src="images/slider/photo.png" alt="slider images">
+</div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <footer class="footer">
@@ -151,7 +191,6 @@
         <div class="footer-top__item footer-top__nav">
           <h6 class="footer-top__title">
             Useful Links</h6>
-      
           <ul class="footer-top__list">
             <li class="footer-top__item">
               <a class="footer-top__link" href="#">About Us</a>
@@ -215,11 +254,8 @@
         <button class="footer-top__form-btn" type="submit">Subscribe</button>
           </form>
         </div>
-
-
       </div>
 
-    
 <div class="footer-bottom">
 <p class="footer-bottom__copy">
   © 2019 CodeAstrology. All Rights Reserved.
@@ -233,19 +269,8 @@
 </div>
 </div>
   </div>
-</div>
-</div>
 </footer>
   </div>
-  </div>
-</header>
-    </div>
-  </div>
-</header>
-
-
-
-
   <script src="js/main.min.js"></script>
 </body>
 </html>
