--- a/app/login.html
+++ b/app/login.html
@@ -75,6 +75,32 @@
       </div>
     </div>
   </section>
+  <section class="modal">
+<div class="container">
+  <div class="modal__links">
+    <a class="modal__link" href="#">REGISTER</a>
+    <a class="modal__link modal__link--active" href="#">LOGIN</a>
+  </div>
+  <form class="modal__form" action="#">
+    Username or email address*
+    <label class="modal__label">
+      <input class="modal__input" type="text" required>
+    </label>
+    <label class="modal__label">
+      Password*
+      <input class="modal__input" type="password" required>
+    </label>
+    <label class="modal__label">
+      <input type="checkbox">
+      Remember me
+    </label>
+    <button  class="modal__btn" type="submit">
+      LOG IN
+    </button>
+    <a class="modal__error" href="#" >Lost your password?</a>
+  </form>
+</div>
+  </section>
 
 </main>
 
