added modul html and css

--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
-<header class="header">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/index.min.css">
+  </head>
+
+  <body>
+
+    <header class="header">
   <div class="container">
     <div class="header__inner">
       <a class="logo" href="#">
@@ -50,8 +53,9 @@
     </div>
   </div>
 </header>
-<main class="main">
-  <section class="top-slider">
+
+    <main class="main">
+      <section class="top-slider">
     <div class="container top-slider__container">
       <div class="top-slider__inner">
         <div class="top-slider__item">
@@ -115,7 +119,7 @@
     </div>
     </div>
   </section>
-  <section class="categories-info">
+       <section class="categories-info">
     <div class="categories-info__inner">
       <div class="container">
         <div class="info">
@@ -222,7 +226,7 @@
       </div>
     </div>
   </section>
-  <section class="video-fashion">
+       <section class="video-fashion">
     <div class="container">
       <div class="video-fashion__inner">
         <div class="video-fashion__popup" style="background-image:url('images/video-fashion.jpg');">
@@ -251,7 +255,7 @@
       </div>
     </div>
   </section>
-  <section class="product">
+      <section class="product">
     <div class="container">
       <h3 class="title">
         TRENDING PRODUCTS
@@ -260,7 +264,6 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et dolore
         aliqua.
       </p>
-
       <div class="product__items">
         <div class="product-item">
           <div class="product-item__img-box">
@@ -305,7 +308,6 @@
             </div>
           </div>
         </div>
-
         <div class="product-item product-item--sale">
           <div class="product-item__img-box">
             <img class="product-item__images" src="images/product/2.jpg" alt="product">
@@ -534,10 +536,9 @@
               <a class="product__link" href="#">
                 LOAD MORE
               </a>
-              </div>
+        </div>
      </section>
-
-  <div class="promo">
+      <div class="promo">
     <div class="container">
       <div class="promo__inner">
         <p class="promo__subtitle">
@@ -571,7 +572,7 @@
       </div>
     </div>
   </div>
-  <div class="partners">
+       <div class="partners">
     <div class="container">
       <ul class="partners__list">
         <li class="partners__item"><img src="images/partners/1.png" alt="partner logo">
@@ -589,6 +590,7 @@
       </ul>
     </div>
   </div>
+      
   <section class="blog">
     <div class="container">
       <h3 class="title">
@@ -659,10 +661,10 @@
       </div>
     </div>
   </section>
-</main>
 
+    </main>
 
-<footer class="footer">
+    <footer class="footer">
   <div class="container">
     <div class="footer-top">
       <div class="footer-top__item footer-top__contact">
@@ -818,8 +820,8 @@
     </div>
   </div>
 </footer>
-</div>
-<script src="js/main.min.js"></script>
-</body>
+
+    <script src="js/main.min.js"></script>
+  </body>
 
 </html>
