--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/blog-one.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <header class="header">
@@ -198,7 +199,7 @@ suspendisse ultrices gravida. Risus comdoumar viverra more maecenas accumsan lac
       O2 COMMENTS
      </div>
             <div class="comments">
-              <img class="comments__img" src="images/avatar/3.jpg" alt="avatar">
+              <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
               <div class="comments__content">
                 <div class="comments__content-top">
                   <p class="comments__content-name">
@@ -219,7 +220,7 @@ suspendisse ultrices gravida. Risus comdoumar viverra more maecenas accumsan lac
               </div>
             </div>
             <div class="comments">
-              <img class="comments__img" src="images/avatar/3.jpg" alt="avatar">
+              <img class="comments__img" src="images/avatar/2.jpg" alt="avatar">
               <div class="comments__content">
                 <div class="comments__content-top">
                   <p class="comments__content-name">
