--- a/app/login.html
+++ b/app/login.html
@@ -57,31 +57,61 @@
 
   <main class="main">
     <section class="top">
-    <div class="top__container" style="background-image: url('images/top-bg.jpg');">
-      <div class="container">
-        <h2 class="top__title title">LOG IN </h2>
-        <div class="breadcrumbs">
-          <ul class="breadcrumbs__list">
+  <div class="top__container" style="background-image: url('images/top-bg.jpg');">
+    <div class="container">
+      <h2 class="top__title title">LOG IN </h2>
+      <div class="breadcrumbs">
+        <ul class="breadcrumbs__list">
 
-            <li class="breadcrumbs__item">
-              <a 
+          <li class="breadcrumbs__item">
+            <a 
                class="breadcrumbs__link" href="#">
               Home
               </a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">
+          </li>
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="#">
                 Log in
               </a>
-            </li>
+          </li>
 
-            
-          </ul>
-        </div>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+<section class="modal">
+  <div class="container">
+    <div class="modal__links">
+      <a class="modal__link " href="#">REGISTER</a>
+      <a class="modal__link modal__link--active " href="#">LOGIN</a>
+    </div>
+    <form class="modal__form" action="#">
+    Username or email address*
+    <label class="modal__label">
+        <input class="modal__input" type="text" required>
+      </label>
+      <label class="modal__label">
+      Password*
+      <input class="modal__input" type="password" required>
+      </label>
+      <p class="modal__text">
+      A password will be sent to your email address.</p>
+      <p class="modal__text">
+      Your personal data will be used to support your experience throughout this website, to manage access to your account, and
+      for other purposes described in our privacy policy.
+    </p>
+      <label class="modal__label">
+        <input type="checkbox">
+      Agree with Terms & Conditions
+    </label>
+      <button  class="modal__btn" type="submit">
+    REGISTER
+    </button>
 
+    </form>
+  </div>
+</section>
   </main>
 
   <footer class="footer">
